Increased padding on toolbar item container to fix overlap with search input  when activity badge was 3 digits.

--- a/styles/headerbar.less
+++ b/styles/headerbar.less
@@ -14,6 +14,9 @@ div:not(.layout-mode-popout){
         padding-top: 5px;
       }
     }
+    div.item-container{
+      padding-right: 2em;
+    }
   }  
 }
 
